--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
     "init-msw": "msw init public/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.487.0",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss": "^4.1.2",
+    "tw-animate-css": "^1.2.5",
     "vue": "^3.4.21"
   },
   "devDependencies": {
