--- a/components.json
+++ b/components.json
@@ -4,7 +4,7 @@
   "typescript": false,
   "tailwind": {
     "config": "",
-    "css": "src/main.css",
+    "css": "src/assets/main.css",
     "baseColor": "neutral",
     "cssVariables": true,
     "prefix": ""
