--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.487.0",
+    "reka-ui": "^2.2.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.2",
     "tw-animate-css": "^1.2.5",
